--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chainlink/contracts": "^1.1.1",
     "@openzeppelin/contracts": "^5.0.2",
     "@openzeppelin/truffle-upgrades": "^1.21.0",
-    "@truffle/hdwallet-provider": "^2.1.15"
+    "@truffle/hdwallet-provider": "^2.1.15",
+    "dotenv": "^16.4.5"
   }
 }
